--- a/media.css
+++ b/media.css
@@ -8,7 +8,7 @@
         padding-left: 40%;
         padding-top: 33px;
     }
-      .btn-default {
+      .slickn>.btn-default {
   background-color: #2b3943;
   border-radius: 3px;
   color: #fff;
