--- a/media.css
+++ b/media.css
@@ -17,6 +17,9 @@
   line-height: 1.33333;
   padding: 5px 9px;
 }
+.btn-danger {
+  border-color: #fff;
+}
 ul {
   padding-bottom: 22px;
   padding-left: 0;
