--- a/media.css
+++ b/media.css
@@ -53,6 +53,9 @@ ul.left {
   left: 42%;
   position: absolute;
 }
+.item {
+  text-align: center;
+}
 }
 
 @media(min-width:320px) and (max-width:767px) {
