--- a/media.css
+++ b/media.css
@@ -59,7 +59,7 @@ ul.left {
  .pad_con {
         padding-bottom: 18px;
         padding-top: 19px;
-        padding-left:0;
+        padding-left:0px!important;
     }
     .pad_cont {
         padding-bottom: 18px;
