--- a/media.css
+++ b/media.css
@@ -60,7 +60,7 @@ ul.left {
         padding-bottom: 18px;
         padding-top: 19px;
         padding-left:0px!important;
-        padding-left: 0;
+        padding-right: 0;
     }
     .pad_cont {
         padding-bottom: 18px;
