--- a/media.css
+++ b/media.css
@@ -66,6 +66,7 @@ ul.left {
         padding-bottom: 18px;
         padding-right:0px!important;
         padding-left: 0;
+        padding-top: 7px!important;
     }
     
 }
