--- a/media.css
+++ b/media.css
@@ -68,6 +68,9 @@ ul.left {
         padding-left: 0;
         padding-top: 7px!important;
     }
+    .pad_cnt {
+  padding: 0 3% 18px;
+}
     
 }
 
