--- a/media.css
+++ b/media.css
@@ -71,6 +71,27 @@ ul.left {
     .pad_cnt {
   padding: 0 3% 18px;
 }
+.pad_ctn {
+  padding-bottom: 24px;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+.pad_ctn > .btn {
+  -moz-user-select: none;
+  background-image: none;
+  border-radius: 2px;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857;
+  margin-bottom: 0;
+  padding: 6px 331px;
+  text-align: center;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 100%;
+}
     
 }
 
