--- a/media.css
+++ b/media.css
@@ -92,6 +92,15 @@ ul.left {
   white-space: nowrap;
   width: 100%;
 }
+.footer_text {
+  text-align: center;
+}
+.footer_text {
+  text-align: center;
+}
+.copy_text {
+  text-align: center;
+}
     
 }
 
