--- a/style.css
+++ b/style.css
@@ -87,13 +87,14 @@
      padding: 5px 17px;
  }
  
- .btn-default {
+ .btn-danger {
      border-radius: 3px;
+     border-color:#fff;
      color: #fff;
      font-family: OpenSans;
      font-size: 18px;
      line-height: 1.33333;
-     padding: 5px 20px;
+     padding: 5px 16px;
      background-color: #2B3943;
  }
  /************slider area************/
