--- a/style.css
+++ b/style.css
@@ -645,25 +645,25 @@
  }
  
  .pad_ctn {
-     padding-left: 17%;
-     padding-bottom: 56px;
+  padding: 0 17% 22px;
  }
  
- .pad_ctn>.btn {
-     -moz-user-select: none;
-     background-image: none;
-     border-radius: 2px;
-     cursor: pointer;
-     display: inline-block;
-     font-size: 14px;
-     font-weight: 400;
-     line-height: 1.42857;
-     margin-bottom: 0;
-     padding: 6px 331px;
-     text-align: center;
-     vertical-align: middle;
-     white-space: nowrap;
- }
+ .pad_ctn > .btn {
+  -moz-user-select: none;
+  background-image: none;
+  border-radius: 2px;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857;
+  margin-bottom: 0;
+  padding: 6px 265px;
+  text-align: center;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 100%;
+}
  
  .btn-warning {
      background-color: #3798db;
