--- a/media.css
+++ b/media.css
@@ -106,13 +106,11 @@ ul.left {
 }
 .progress-bar {
   background-color: #fff;
-  box-shadow: none;
   color: #0f0f0f;
-  float: none;
   font-size: 12px;
   height: 200px;
   line-height: 20px;
-  margin-left: 35%;
+  margin-left: 34% !important;
   position: relative;
   text-align: center;
   transition: width 0.6s ease 0s;
